Only paint the background onto the scrolling contents layer if we have a scrolling contents layer.

BUG=647169,645949
TEST=CompositedLayerMappingTest.BackgroundPaintedIntoGraphicsLayerIfNotCompositedScrolling
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2346883003
Cr-Commit-Position: refs/heads/master@{#419064}

Former-commit-id: dd59f478410b76764e227fe24642bae6f7b06b26