third_party/WebKit/Source/core/paint/PaintLayer.h
@@ -438,7 +438,7 @@ public:
     // (i.e. the background can scroll with the content). When the background is also
     // opaque this allows us to composite the scroller even on low DPI as we can
     // draw with subpixel anti-aliasing.
-    bool shouldPaintBackgroundOntoScrollingContentsLayer() const;
+    bool canPaintBackgroundOntoScrollingContentsLayer() const;
     // NOTE: If you are using hasCompositedLayerMapping to determine the state of compositing for this layer,
     // (and not just to do bookkeeping related to the mapping like, say, allocating or deallocating a mapping),
     // then you may have incorrect logic. Use compositingState() instead.
